--- a/core/photo-store/src/main/AndroidManifest.xml
+++ b/core/photo-store/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application>
         <provider
             android:name="ru.smalljinn.core.photo_store.PhotoFileProvider"
-            android:authorities="ru.smalljinn.kolumbus.fileprovider${applicationId}"
+            android:authorities="ru.smalljinn.kolumbus.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
